2009-04-09  vadim  <vadim@vk.crocodile.org>

	* VERSION: start v3.0.5

2009-04-08  Vadim Kurland  <vadim@vk.crocodile.org>

	* v3.0.4 released, merged to the trunk, this comment is r256

2009-03-29  vadim  <vadim@vk.crocodile.org>

	* v3.0.4 release

2009-03-25  vadim  <vadim@vk.crocodile.org>

	* RuleElement.cpp (RuleElementTSrv::validateChild): fixed bug
	#2712575: "NAT RuleSetView allows TagService to be in Translated
	Svc". TagService object should not be allowed in "Translated
	Service" in NAT rules.

2009-02-21  vadim  <vadim@vk.crocodile.org>

	* VERSION (LIBFWBUILDER_REVISION): because of internal changes in
	libfwbuilder in v3.0.4, bumping up so version to 8.2.0

2009-02-17  vadim  <vadim@vk.crocodile.org>

	* Management.cpp (Management::fromXML): fixed bug #2609796
	"internal object Management does not accept ipv6 address". Class
	Management should accept ipv6 address.

2009-01-23  vadim  <vadim@vk.crocodile.org>

	* FWObjectDatabase_search.cpp (FWObjectDatabase::findWhereObjectIsUsed):
	fixes for bug #2412334: "feature request: where used -> directly".
	Function FWObjectDatabase::findWhereObjectIsUsed returns a set of
	pointers FWObject*. These pointers can be either parent of the
	given object, or FWReference objects pointing to it. Note the
	change: in previous versions this function tried to clean up
	returned set and replaced references with pointers to the group or
	rule that owns those references. This substitution is in fact
	task-specific and should be done in the caller.

	* DNSName.cpp (DNSName::loadFromSource): fixed bug #2526193: "typo
	in error message"

2009-01-10  vadim  <vadim@vk.crocodile.org>

	* fwbuilder/snmp.cpp (SNMPVariable::create): using
	SNMPVariable_Bits for snmp repsonses of type OBJECT_ID. This is
	used in getAddressAndNetmask for IP-MIB data.

	* fwbuilder/snmp.cpp (SNMPVariable_Bits::toString): This class of
	SNMP variable now returns dot-separated text representation of its
	value.
