@@ -1,3 +1,9 @@
+2009-04-20  vadim  <vadim@vk.crocodile.org>
+
+	* RuleElement.cpp: Additional validation to make sure Inteval
+	objects are not allowed in rule elements except for the
+	RuleElementInterval
+
 2009-04-09  vadim  <vadim@vk.crocodile.org>
 
 	* VERSION: start v3.0.5
